details about the passwort length added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="pass-length-container">
             <input type="number" min="6" max="12" id="pass-length" value="6">
-            <label for="pass-length" >choose the charachter length of your password</label>
+            <label for="pass-length" >choose the charachter length of your password <br> (min. length 6, max. length 12)</label>
         </div>
         <div class="checkbox-container">
             <input type="checkbox" id="deactive-numbers">
